--- a/src/material/tabs/_tabs-theme.scss
+++ b/src/material/tabs/_tabs-theme.scss
@@ -116,7 +116,9 @@
   }
 
   // Set pagination chevrons to contrast background
-  > .mat-tab-header-pagination .mat-tab-header-pagination-chevron {
+  > .mat-tab-header-pagination .mat-tab-header-pagination-chevron,
+  > .mat-tab-links .mat-focus-indicator::before,
+  > .mat-tab-header .mat-focus-indicator::before {
     border-color: mat-color($background-color, default-contrast);
   }
 
